--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,9 +3,10 @@
 
 @import "sidebar";
 @import "header";
-@import "realtors";
+@import "nav";
 @import "features";
 @import "story";
 @import "homes";
 @import "gallery";
 @import "footer";
+@import "search"
