--- a/html/sass/_header.scss
+++ b/html/sass/_header.scss
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  align-items: center;;
+  align-items: center;
   justify-content: space-between;
   // background-color: red;
   grid-column: 1 / -1;
