--- a/html/sass/_nav.scss
+++ b/html/sass/_nav.scss
@@ -1,10 +1,8 @@
 .nav__container {
   
   max-width: 30%;
-  // background: hsla(45, 90%, 90%, 4);
 
-  color: $color-font-light-2;
-  font-size: 1.8rem;
+  color: $color-font-light-1;
 }
 .nav {
   &__list {
@@ -13,12 +11,13 @@
   }
   &__item {
     &:nth-of-type(2n-1) {
-      margin-right: 3rem;
+      margin-right: 2.5em;
     }
   }
   &__link {
     text-decoration: none;
     color: currentColor;
+    font-size: 1.8rem;
   }
   &__icon {
     width: 1.75rem;
