--- a/html/sass/main.scss
+++ b/html/sass/main.scss
@@ -1,13 +1,14 @@
 @import "base";
-@import "typography";
 
 @import "sidebar";
 @import "header";
 @import "nav";
-@import "features";
+@import "favorites";
 @import "story";
 @import "homes";
 @import "gallery";
 @import "footer";
 @import "search";
 @import "vocabulary";
+
+@import "typography";
