--- a/html/sass/_nav.scss
+++ b/html/sass/_nav.scss
@@ -13,8 +13,13 @@
     &:nth-of-type(2n-1) {
       margin-right: 2.5em;
     }
+    &-active {
+      color: $color-primary;
+    }
   }
   &__link {
+    display: flex;
+    align-items: baseline;
     text-decoration: none;
     color: currentColor;
     font-size: 1.8rem;
