--- a/html/sass/_sidebar.scss
+++ b/html/sass/_sidebar.scss
@@ -1,7 +1,6 @@
 .side-bar {
   grid-column: 1 / 3;
   padding: 1.5rem;
-
   display: grid;
   grid-gap: 3rem;
 
@@ -17,7 +16,8 @@
   font-size: 1.4rem;
   color: $color-font-light-1;
   &__title {
-
+    color: $color-primary;
+    text-transform: uppercase;
   }
   &__list {
     list-style: none;
@@ -35,10 +35,10 @@
     width: 100%;
     text-align: left;
     &:hover {
-      background-color: $color-grey-dark-2;
+      background-color: $color-grey-dark-1;
     }
     &--selected {
-      background-color: $color-grey-dark-2;
+      background-color: $color-grey-dark-1;
     }
   }
   &__link {
