--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,13 +15,13 @@ html {
 body {
   font-family: "Nunito", sans-serif;
   color: #eeee;
-  background-color: #423425;
+  background-color: #261c12;
   font-weight: 300;
   line-height: 1.6; }
 
 .container {
   display: grid;
-  grid-template-rows: 9rem auto 40vw repeat(3, min-content);
+  grid-template-rows: 9rem auto;
   grid-template-columns: [leftspace-start] 4rem [leftspace-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end rightspace-start] 4rem [rightspace-end]; }
 
 .content {
@@ -29,62 +29,6 @@ body {
   margin-top: 2rem;
   grid-column: full-start / full-end;
   grid-template-columns: repeat(10, 1fr); }
-
-.heading-1, .heading-2, .heading-3, .heading-4 {
-  font-family: "Josefin Sans", sans-serif;
-  font-weight: 400; }
-
-.heading-1 {
-  font-size: 4.5rem;
-  color: #f9f7f6;
-  line-height: 1; }
-
-.heading-2 {
-  font-size: 4rem;
-  font-style: italic;
-  line-height: 1; }
-  .heading-2--light {
-    color: #f9f7f6; }
-  .heading-2--dark {
-    color: #54483A; }
-
-.heading-3 {
-  font-size: 1.9rem;
-  color: #c69963;
-  text-transform: uppercase; }
-
-.heading-4 {
-  font-size: 1.6rem; }
-  .heading-4--light {
-    color: #f9f7f6; }
-  .heading-4--dark {
-    color: #54483A; }
-
-.btn {
-  background-color: #c69963;
-  border: none;
-  border-radius: 0;
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 1.5rem;
-  color: #fff;
-  text-transform: uppercase;
-  padding: 1.8rem 3rem;
-  cursor: pointer;
-  transition: all .2s; }
-  .btn:hover {
-    background-color: #B28451; }
-
-.mb-sm {
-  margin-bottom: 2rem; }
-
-.mb-md {
-  margin-bottom: 3rem; }
-
-.mb-lg {
-  margin-bottom: 4rem; }
-
-.mb-hg {
-  margin-bottom: 8rem; }
 
 .side-bar {
   grid-column: 1 / 3;
@@ -98,6 +42,9 @@ body {
   padding: 1.5rem;
   font-size: 1.4rem;
   color: #eeee; }
+  .entries__title {
+    color: #c69963;
+    text-transform: uppercase; }
   .entries__list {
     list-style: none; }
   .entries__item {
@@ -112,16 +59,16 @@ body {
     width: 100%;
     text-align: left; }
     .entries__btn:hover {
-      background-color: #423425; }
+      background-color: #54483A; }
     .entries__btn--selected {
-      background-color: #423425; }
+      background-color: #54483A; }
   .entries__link {
     padding: .4em .7em;
     color: currentColor;
     display: block;
     text-decoration: none; }
     .entries__link:hover {
-      background-color: #423425; }
+      background-color: #261c12; }
 
 .header {
   display: flex;
@@ -146,7 +93,12 @@ body {
 .nav__item:nth-of-type(2n-1) {
   margin-right: 2.5em; }
 
+.nav__item-active {
+  color: #c69963; }
+
 .nav__link {
+  display: flex;
+  align-items: baseline;
   text-decoration: none;
   color: currentColor;
   font-size: 1.8rem; }
@@ -156,6 +108,129 @@ body {
   height: 1.75rem;
   margin-right: .5rem;
   fill: currentColor; }
+
+.favorites {
+  width: 100%;
+  padding: 2rem;
+  grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  grid-gap: 1.3rem; }
+  .favorites__title {
+    grid-column: 1 / -1;
+    text-align: center;
+    font-size: 25rem; }
+
+.favored {
+  background-color: #16130c; }
+  .favored__link {
+    color: currentColor;
+    text-decoration: none;
+    display: grid;
+    padding: 1rem 1rem 2rem 2rem; }
+  .favored__headword {
+    font-size: 2.2rem; }
+  .favored__remove {
+    border: none;
+    color: currentColor;
+    background-color: transparent;
+    cursor: pointer;
+    float: right; }
+  .favored__remove-icon {
+    width: 3rem;
+    height: 3rem;
+    fill: currentColor;
+    pointer-events: none; }
+  .favored__defines {
+    padding-left: 2rem; }
+  .favored__mean {
+    font-size: 1.6rem; }
+
+.pagination {
+  grid-column: 1 / -1; }
+  .pagination__list {
+    display: grid;
+    grid-gap: 0.8rem;
+    grid-template-columns: repeat(auto-fit, 3.4rem); }
+  .pagination__item {
+    background-color: #16130c;
+    list-style: none;
+    border-radius: 50%;
+    border: 0.2rem solid #B28451;
+    display: block; }
+    .pagination__item-active {
+      background-color: #B28451;
+      color: #f9f7f6; }
+  .pagination__link {
+    display: flex;
+    width: 3rem;
+    height: 3rem;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.8rem;
+    text-decoration: none;
+    color: currentColor; }
+
+.showcase {
+  padding: 2rem;
+  grid-column: 1 / -1;
+  background-color: #16130c; }
+  .showcase__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end; }
+  .showcase__title {
+    text-transform: uppercase;
+    color: #c69963; }
+  .showcase__list {
+    height: 22rem;
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min-content, 20rem));
+    grid-template-rows: repeat(4, min-content);
+    grid-auto-flow: column; }
+    .showcase__list-favorites {
+      grid-auto-flow: initial; }
+  .showcase__item {
+    background-color: #101d2c;
+    background-clip: content-box;
+    list-style-type: none;
+    font-size: 1.8rem;
+    padding: .5rem;
+    display: flex;
+    height: 4.5rem;
+    transform: translateZ(0); }
+  .showcase__link {
+    color: currentColor;
+    text-decoration: none;
+    text-align: center;
+    display: inline-block;
+    line-height: 1.8;
+    flex: 2; }
+  .showcase__remove {
+    visibility: hidden;
+    position: absolute;
+    right: 0;
+    border: unset;
+    color: unset;
+    background-color: transparent;
+    vertical-align: text-top;
+    padding: 0 .5rem; }
+    .showcase__remove-icon {
+      width: 2.5rem;
+      height: 2.5rem;
+      fill: currentColor; }
+  .showcase .showcase__list-edit .showcase__remove {
+    visibility: visible; }
+
+.btn-ranges__btn {
+  background-color: #101d2c;
+  border: unset;
+  color: unset;
+  font-size: 1.6rem;
+  padding: 1rem;
+  cursor: pointer;
+  margin-left: 1rem; }
 
 .search {
   --height: 3.3rem;
@@ -194,9 +269,58 @@ body {
   display: grid;
   padding: 1.5rem;
   background-color: #16130c;
-  background-clip: content-box; }
+  background-clip: content-box;
+  font-size: 1.8rem; }
   .vocabulary__container {
     padding: 1.5rem; }
+  .vocabulary__header {
+    display: flex;
+    align-items: baseline;
+    margin: 2rem 2rem 0 1rem; }
+  .vocabulary__headword {
+    text-transform: capitalize; }
+  .vocabulary__functional-label {
+    margin-left: 1rem; }
+  .vocabulary__pronunciation {
+    display: flex;
+    align-items: center;
+    margin-left: 2rem; }
+  .vocabulary__ipa:before, .vocabulary__ipa:after {
+    content: " /"; }
+  .vocabulary__sound {
+    background-color: transparent;
+    color: currentColor;
+    border: none;
+    cursor: pointer;
+    margin-left: 1rem; }
+    .vocabulary__sound-icon {
+      fill: #c69963;
+      width: 2rem;
+      height: 2rem; }
+  .vocabulary__brief-container {
+    margin: 0 2rem; }
+  .vocabulary__brief {
+    padding: 0 2rem; }
+    .vocabulary__brief-list {
+      padding: 0 2rem;
+      list-style-position: inside;
+      border: 0.1rem solid #B28451; }
+    .vocabulary__brief-item {
+      padding-left: 2rem; }
+      .vocabulary__brief-item:first-child {
+        padding-top: 2rem; }
+      .vocabulary__brief-item:last-child {
+        padding-bottom: 2rem; }
+  .vocabulary__save {
+    background-color: transparent;
+    color: currentColor;
+    border: none;
+    cursor: pointer;
+    margin-left: auto; }
+    .vocabulary__save-icon, .vocabulary__save-icon {
+      fill: #c69963;
+      width: 2.5rem;
+      height: 2.5rem; }
   .vocabulary__definition {
     padding-left: 1em;
     font-size: 1.7rem;
@@ -231,3 +355,61 @@ body {
       content: "\0020" "]" "\0020"; }
   .vocabulary__seealso::before {
     content: "\2014" "\0020" "\0020"; }
+  .vocabulary__crossRef {
+    margin: 1rem;
+    padding-left: 1em;
+    font-size: 1.7rem; }
+
+.heading-1, .heading-2, .heading-3, .heading-4 {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 400; }
+
+.heading-1 {
+  font-size: 6.5rem;
+  color: #f9f7f6;
+  line-height: 1; }
+
+.heading-2 {
+  font-size: 4rem;
+  font-style: italic;
+  line-height: 1; }
+  .heading-2--light {
+    color: #f9f7f6; }
+  .heading-2--dark {
+    color: #54483A; }
+
+.heading-3 {
+  font-size: 2.5rem; }
+
+.heading-4 {
+  font-size: 1.6rem; }
+  .heading-4--light {
+    color: #f9f7f6; }
+  .heading-4--dark {
+    color: #54483A; }
+
+.btn {
+  background-color: #c69963;
+  border: none;
+  border-radius: 0;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.5rem;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 1.8rem 3rem;
+  cursor: pointer;
+  transition: all .2s; }
+  .btn:hover {
+    background-color: #B28451; }
+
+.mb-sm {
+  margin-bottom: 2rem; }
+
+.mb-md {
+  margin-bottom: 3rem; }
+
+.mb-lg {
+  margin-bottom: 4rem; }
+
+.mb-hg {
+  margin-bottom: 8rem; }
